<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/box_one"
                android:textColor="@color/white"
                android:background="@color/box_one"
                android:gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="32sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/box_two"
                android:gravity="center"
                android:text="@string/box_two"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/box_three"
                    android:text="@string/box_three"
                    android:textColor="@color/white"

                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/box_four"
                    android:text="@string/box_four"
                    android:textColor="@color/white"

                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/box_five"
                    android:text="Box five"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:textSize="32sp"

                android:layout_height="match_parent"
                android:layout_width="375dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/box_six"
                android:background="@color/box_six"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="250dp"
                android:layout_marginBottom="250dp"

                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/box_seven"
                android:gravity="center|bottom"

                android:text="@string/box_seven"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
