<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNumberOne"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"

        android:ems="10"
        android:hint="@string/first_namber"


        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <EditText
        android:id="@+id/editNumberTwo"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginEnd="44dp"

        android:autofillHints="231"
        android:ems="10"
        android:hint="@string/second_number"
        android:inputType="number"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />
    <Button
        android:id="@+id/setRes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <TextView
        android:id="@+id/textZnak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="+"
        app:layout_constraintEnd_toStartOf="@+id/editNumberTwo"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/editNumberOne"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="+"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumberOne" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"

        android:text="-"
        app:layout_constraintEnd_toStartOf="@+id/buttonAster"
        app:layout_constraintTop_toBottomOf="@+id/editNumberOne" />

    <Button
        android:id="@+id/buttonAster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:text="*"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivision"
        app:layout_constraintTop_toBottomOf="@+id/editNumberTwo" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"

        android:layout_marginEnd="4dp"
        android:text="/"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumberTwo" />
</androidx.constraintlayout.widget.ConstraintLayout>